--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,8 +28,11 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Npm Cache
+      uses: actions/cache@v2
+      with:
+        path: "server"
         cache: 'npm'
     - run: npm ci 
     - run: npm run build --if-present
     - run: npm test
-    
