--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,8 +31,8 @@ jobs:
     - name: Npm Cache
       uses: actions/cache@v2
       with:
-        path: "server"
-        cache: 'npm'
+        path: "server/node_modules"
+        key: node-modules-${{ hashFiles('server/package.json') }}
     - run: npm ci 
     - run: npm run build --if-present
     - run: npm test
