--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "node server.js"
+    "test": "node --check server.js"
   },
   "author": "David Canaday",
   "license": "MIT",
