--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "randomcolor": "^0.6.2",
+    "sanitize-html": "^2.4.0",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
