--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,18 @@
     "mysql": "^2.18.1",
     "randomcolor": "^0.6.2",
     "sanitize-html": "^2.4.0",
+    "simplex-noise": "^2.4.0",
     "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nerd8622/U-boat-Upheaval.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nerd8622/U-boat-Upheaval/issues"
+  },
+  "homepage": "https://github.com/nerd8622/U-boat-Upheaval#readme"
 }
